tests/dataset/tpc-ds/compiler/c/q2.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int d_week_seq1;
  double sun_ratio;
  double mon_ratio;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ws_sold_date_sk;
  double ws_ext_sales_price;
  const char *ws_sold_date_name;
} web_sale_t;
typedef struct {
  int len;
  web_sale_t *data;
} web_sale_list_t;
web_sale_list_t create_web_sale_list(int len) {
  web_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(web_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_sold_date_sk;
  double cs_ext_sales_price;
  const char *cs_sold_date_name;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_week_seq;
  const char *d_day_name;
  int d_year;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sold_date_sk;
  double sales_price;
  const char *day;
} ws_item_t;
typedef struct {
  int len;
  ws_item_t *data;
} ws_item_list_t;
ws_item_list_t create_ws_item_list(int len) {
  ws_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ws_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int sold_date_sk;
  double sales_price;
  const char *day;
} cs_item_t;
typedef struct {
  int len;
  cs_item_t *data;
} cs_item_list_t;
cs_item_list_t create_cs_item_list(int len) {
  cs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(cs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_week_seq;
  double sun_sales;
  double mon_sales;
  double tue_sales;
  double wed_sales;
  double thu_sales;
  double fri_sales;
  double sat_sales;
} wswscs_item_t;
typedef struct {
  int len;
  wswscs_item_t *data;
} wswscs_item_list_t;
wswscs_item_list_t create_wswscs_item_list(int len) {
  wswscs_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(wswscs_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int week_seq;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_week_seq1;
  double sun_ratio;
  double mon_ratio;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q2_result_result;
static void test_TPCDS_Q2_result() {
  tmp1_t tmp1[] = {
      (tmp1_t){.d_week_seq1 = 1, .sun_ratio = 0.5, .mon_ratio = 0.5}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q2_result_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q2_result_result.len; i3++) {
      if (test_TPCDS_Q2_result_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  web_sale_t web_sales[] = {(web_sale_t){.ws_sold_date_sk = 1,
                                         .ws_ext_sales_price = 5.0,
                                         .ws_sold_date_name = "Sunday"},
                            (web_sale_t){.ws_sold_date_sk = 2,
                                         .ws_ext_sales_price = 5.0,
                                         .ws_sold_date_name = "Monday"},
                            (web_sale_t){.ws_sold_date_sk = 8,
                                         .ws_ext_sales_price = 10.0,
                                         .ws_sold_date_name = "Sunday"},
                            (web_sale_t){.ws_sold_date_sk = 9,
                                         .ws_ext_sales_price = 10.0,
                                         .ws_sold_date_name = "Monday"}};
  int web_sales_len = sizeof(web_sales) / sizeof(web_sales[0]);
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){.cs_sold_date_sk = 1,
                       .cs_ext_sales_price = 5.0,
                       .cs_sold_date_name = "Sunday"},
      (catalog_sale_t){.cs_sold_date_sk = 2,
                       .cs_ext_sales_price = 5.0,
                       .cs_sold_date_name = "Monday"},
      (catalog_sale_t){.cs_sold_date_sk = 8,
                       .cs_ext_sales_price = 10.0,
                       .cs_sold_date_name = "Sunday"},
      (catalog_sale_t){.cs_sold_date_sk = 9,
                       .cs_ext_sales_price = 10.0,
                       .cs_sold_date_name = "Monday"}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1,
                                        .d_week_seq = 1,
                                        .d_day_name = "Sunday",
                                        .d_year = 1998},
                           (date_dim_t){.d_date_sk = 2,
                                        .d_week_seq = 1,
                                        .d_day_name = "Monday",
                                        .d_year = 1998},
                           (date_dim_t){.d_date_sk = 8,
                                        .d_week_seq = 54,
                                        .d_day_name = "Sunday",
                                        .d_year = 1999},
                           (date_dim_t){.d_date_sk = 9,
                                        .d_week_seq = 54,
                                        .d_day_name = "Monday",
                                        .d_year = 1999}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  ws_item_list_t tmp4 = create_ws_item_list(web_sales_len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < web_sales_len; tmp6++) {
    web_sale_t ws = web_sales[tmp6];
    tmp4.data[tmp5] = (ws_item_t){.sold_date_sk = ws.ws_sold_date_sk,
                                  .sales_price = ws.ws_ext_sales_price,
                                  .day = ws.ws_sold_date_name};
    tmp5++;
  }
  tmp4.len = tmp5;
  cs_item_list_t tmp7 = create_cs_item_list(catalog_sales_len);
  int tmp8 = 0;
  for (int tmp9 = 0; tmp9 < catalog_sales_len; tmp9++) {
    catalog_sale_t cs = catalog_sales[tmp9];
    tmp7.data[tmp8] = (cs_item_t){.sold_date_sk = cs.cs_sold_date_sk,
                                  .sales_price = cs.cs_ext_sales_price,
                                  .day = cs.cs_sold_date_name};
    tmp8++;
  }
  tmp7.len = tmp8;
  list_int wscs = (tmp4) union(tmp7);
  wswscs_item_t wswscs[10];
  int wswscs_len = 0;
  for (int i10 = 0; i10 < wscs.len; i10++) {
    int w = wscs.data[i10];
    for (int i11 = 0; i11 < date_dim_len; i11++) {
      date_dim_t d = date_dim[i11];
      if (!(w.sold_date_sk == d.d_date_sk)) {
        continue;
      }
      int tmp12 = -1;
      for (int i13 = 0; i13 < wswscs_len; i13++) {
        if (strcmp(wswscs[i13].name, (tmp_item_t){.week_seq = d.d_week_seq}) ==
            0) {
          tmp12 = i13;
          break;
        }
      }
      if (tmp12 == -1) {
        wswscs[wswscs_len].name = (tmp_item_t){.week_seq = d.d_week_seq};
        wswscs[wswscs_len].count = 1;
        tmp12 = wswscs_len;
        wswscs_len++;
      } else {
        wswscs[tmp12].count++;
      }
    }
  }
  wswscs_item_list_t tmp14 = wswscs_item_list_t_create(wswscs_len);
  int tmp15 = 0;
  for (int tmp16 = 0; tmp16 < wswscs_len; tmp16++) {
    wswscs_item_t w = wswscs[tmp16];
    if (!(w.d_week_seq == 1)) {
      continue;
    }
    tmp14.data[tmp15] = w;
    tmp15++;
  }
  tmp14.len = tmp15;
  wswscs_item_list_t year1 = tmp14;
  wswscs_item_list_t tmp17 = wswscs_item_list_t_create(wswscs_len);
  int tmp18 = 0;
  for (int tmp19 = 0; tmp19 < wswscs_len; tmp19++) {
    wswscs_item_t w = wswscs[tmp19];
    if (!(w.d_week_seq == 54)) {
      continue;
    }
    tmp17.data[tmp18] = w;
    tmp18++;
  }
  tmp17.len = tmp18;
  wswscs_item_list_t year2 = tmp17;
  result_item_list_t tmp20 = result_item_list_t_create(year1.len * year2.len);
  int tmp21 = 0;
  for (int tmp22 = 0; tmp22 < year1.len; tmp22++) {
    wswscs_item_t y = year1.data[tmp22];
    for (int tmp23 = 0; tmp23 < year2.len; tmp23++) {
      wswscs_item_t z = year2.data[tmp23];
      if (!(y.d_week_seq == z.d_week_seq - 53)) {
        continue;
      }
      tmp20.data[tmp21] =
          (result_item_t){.d_week_seq1 = y.d_week_seq,
                          .sun_ratio = y.sun_sales / z.sun_sales,
                          .mon_ratio = y.mon_sales / z.mon_sales};
      tmp21++;
    }
  }
  tmp20.len = tmp21;
  result_item_list_t result = tmp20;
  printf("[");
  for (int i24 = 0; i24 < result.len; i24++) {
    if (i24 > 0)
      printf(",");
    result_item_t it = result.data[i24];
    printf("{");
    _json_string("d_week_seq1");
    printf(":");
    _json_int(it.d_week_seq1);
    printf(",");
    _json_string("sun_ratio");
    printf(":");
    _json_float(it.sun_ratio);
    printf(",");
    _json_string("mon_ratio");
    printf(":");
    _json_float(it.mon_ratio);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q2_result_result = result;
  test_TPCDS_Q2_result();
  free(tmp4.data);
  free(tmp7.data);
  free(year1.data);
  free(year2.data);
  return 0;
}
